--- a/frontend/render.yaml
+++ b/frontend/render.yaml
@@ -1,10 +1,10 @@
 services:
   - type: web
-    name: frontend
+    name: fooddelivery-frontend
     env: static
-    staticPublishPath: build
     buildCommand: npm run build
-    redirects:
-      - source: /*
+    staticPublishPath: dist
+    routes:
+      - type: rewrite
+        source: /*
         destination: /index.html
-        status: 200
