--- a/frontend/render.yaml
+++ b/frontend/render.yaml
@@ -5,6 +5,17 @@ services:
     buildCommand: npm run build
     staticPublishPath: dist
     routes:
+      # 🔥 Rewrite all frontend routes to index.html
       - type: rewrite
         source: /*
         destination: /index.html
+
+      # ✅ Allow API routes to pass through to backend untouched
+      - type: proxy
+        source: /api/*
+        destination: https://your-backend-service.onrender.com/api/
+
+      # ✅ Allow uploads (images) to be accessed directly
+      - type: proxy
+        source: /uploads/*
+        destination: https://your-backend-service.onrender.com/uploads/
